--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,11 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="theme-color" content="#673ab8">
 		<link rel="manifest" href="/manifest.json">
-		<!--
-		<% for (var chunk of webpack.chunks) { %>
-			<% for (var file of chunk.files) { %>
-				<% if (htmlWebpackPlugin.options.preload && file.match(/\.(js|css)$/)) { %>
-					<link rel="preload" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>">
-				<% } else if (file.match(/manifest\.json$/)) { %>
-					<link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath + file %>">
-				<% } %>
-			<% } %>
-		<% } %>
-		-->
 	</head>
 	<body>
-		<%=
-			/*require('../config/prerender')()*/
-			htmlWebpackPlugin.options.prerender()
-		%>
+		<div id="app" prerender></div>
+		<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" /> -->
 	</body>
 </html>
