--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,6 @@
     <link rel="manifest" href="/manifest.json">
   </head>
   <body>
-    <div id="app" prerender></div>
-    <script>
-      (function(style){
-        style.rel='stylesheet'
-        style.href='https://fonts.googleapis.com/icon?family=Material+Icons'
-        document.head.appendChild(style)
-      })(document.createElement('link'));
-    </script>
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" /> -->
+    <div id="app"></div>
   </body>
 </html>
