--- a/codecs/webp_enc/example.html
+++ b/codecs/webp_enc/example.html
@@ -27,7 +27,7 @@
       get_result_pointer: Module.cwrap('get_result_pointer', 'number', []),
       get_result_size: Module.cwrap('get_result_size', 'number', []),
     };
-    const image = await loadImage('/example.png');
+    const image = await loadImage('../example.png');
     const p = api.create_buffer(image.width, image.height);
     Module.HEAP8.set(image.data, p);
     api.encode(p, image.width, image.height, 2);
