--- a/codecs/mozjpeg_enc/example.html
+++ b/codecs/mozjpeg_enc/example.html
@@ -27,6 +27,7 @@
       get_result_pointer: Module.cwrap('get_result_pointer', 'number', []),
       get_result_size: Module.cwrap('get_result_size', 'number', []),
     };
+    console.log('Version:', api.version().toString(16));
     const image = await loadImage('../example.png');
     const p = api.create_buffer(image.width, image.height);
     Module.HEAP8.set(image.data, p);
