--- a/codecs/webp_enc/example.html
+++ b/codecs/webp_enc/example.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <script src='webp_enc.js'></script>
 <script>
-  const Module = webp_enc();
+  const module = webp_enc();
 
   async function loadImage(src) {
     // Load image
@@ -17,27 +17,48 @@
     return ctx.getImageData(0, 0, img.width, img.height);
   }
 
-  Module.onRuntimeInitialized = async _ => {
-    const api = {
-      version: Module.cwrap('version', 'number', []),
-      create_buffer: Module.cwrap('create_buffer', 'number', ['number', 'number']),
-      destroy_buffer: Module.cwrap('destroy_buffer', '', ['number']),
-      encode: Module.cwrap('encode', '', ['number', 'number', 'number', 'number']),
-      free_result: Module.cwrap('free_result', '', ['number']),
-      get_result_pointer: Module.cwrap('get_result_pointer', 'number', []),
-      get_result_size: Module.cwrap('get_result_size', 'number', []),
-    };
-    console.log('Version:', api.version().toString(16));
+  module.onRuntimeInitialized = async _ => {
+    console.log('Version:', module.version().toString(16));
     const image = await loadImage('../example.png');
-    const p = api.create_buffer(image.width, image.height);
-    Module.HEAP8.set(image.data, p);
-    api.encode(p, image.width, image.height, 2);
-    const resultPointer = api.get_result_pointer();
-    const resultSize = api.get_result_size();
-    const resultView = new Uint8Array(Module.HEAP8.buffer, resultPointer, resultSize);
+    const p = module.create_buffer(image.width, image.height);
+    module.HEAP8.set(image.data, p);
+    module.encode(p, image.width, image.height, {
+      quality: 100,
+      image_hint: 0,
+      target_size: 0,
+      target_PSNR: 0,
+      method: 6,
+      sns_strength: 50,
+      filter_strength: 60,
+      filter_sharpness: 0,
+      filter_type: 1,
+      partitions: 0,
+      segments: 4,
+      pass: 1,
+      show_compressed: 0,
+      preprocessing: 0,
+      autofilter: 0,
+      partition_limit: 0,
+      alpha_compression: 1,
+      alpha_filtering: 1,
+      alpha_quality: 100,
+      lossless: 1,
+      exact: 0,
+      image_hint: 0,
+      emulate_jpeg_size: 0,
+      thread_level: 0,
+      low_memory: 0,
+      near_lossless: 100,
+      use_delta_palette: 0,
+      use_sharp_yuv: 0,
+    });
+    const resultPointer = module.get_result_pointer();
+    const resultSize = module.get_result_size();
+    console.log('size', resultSize);
+    const resultView = new Uint8Array(module.HEAP8.buffer, resultPointer, resultSize);
     const result = new Uint8Array(resultView);
-    api.free_result(resultPointer);
-    api.destroy_buffer(p);
+    module.free_result();
+    module.destroy_buffer(p);
 
     const blob = new Blob([result], {type: 'image/webp'});
     const blobURL = URL.createObjectURL(blob);
