Adding options to mozjpeg wasm

--- a/codecs/mozjpeg_enc/example.html
+++ b/codecs/mozjpeg_enc/example.html
@@ -22,9 +22,23 @@
     const image = await loadImage('../example.png');
     const p = module.create_buffer(image.width, image.height);
     module.HEAP8.set(image.data, p);
-    module.encode(p, image.width, image.height, 2);
+    module.encode(p, image.width, image.height, {
+      quality: 40,
+      baseline: false,
+      arithmetic: false,
+      progressive: true,
+      optimize_coding: true,
+      smoothing: 0,
+      color_space: module.J_COLOR_SPACE.JCS_YCbCr,
+      quant_table: 3,
+      trellis_multipass: true,
+      trellis_opt_zero: true,
+      trellis_opt_table: true,
+      trellis_loops: 1,
+    });
     const resultPointer = module.get_result_pointer();
     const resultSize = module.get_result_size();
+    console.log('size', resultSize);
     const resultView = new Uint8Array(module.HEAP8.buffer, resultPointer, resultSize);
     const result = new Uint8Array(resultView);
     module.free_result();
