Forgot about this enum

--- a/codecs/mozjpeg_enc/example.html
+++ b/codecs/mozjpeg_enc/example.html
@@ -29,7 +29,7 @@
       progressive: true,
       optimize_coding: true,
       smoothing: 0,
-      color_space: module.J_COLOR_SPACE.JCS_YCbCr,
+      color_space: 3,
       quant_table: 3,
       trellis_multipass: true,
       trellis_opt_zero: true,
