--- a/codecs/webp_dec/example.html
+++ b/codecs/webp_dec/example.html
@@ -9,35 +9,14 @@
   }
 
   Module.onRuntimeInitialized = async _ => {
-    const api = {
-      version: Module.cwrap('version', 'number', []),
-      create_buffer: Module.cwrap('create_buffer', 'number', ['number', 'number']),
-      destroy_buffer: Module.cwrap('destroy_buffer', '', ['number']),
-      decode: Module.cwrap('decode', '', ['number', 'number']),
-      free_result: Module.cwrap('free_result', '', ['number']),
-      get_result_pointer: Module.cwrap('get_result_pointer', 'number', []),
-      get_result_width: Module.cwrap('get_result_width', 'number', []),
-      get_result_height: Module.cwrap('get_result_height', 'number', []),
-    };
-    console.log('Version:', api.version().toString(16));
+    console.log('Version:', Module.version().toString(16));
     const image = await loadFile('../example.webp');
-    const p = api.create_buffer(image.byteLength);
-    Module.HEAP8.set(new Uint8Array(image), p);
-    api.decode(p, image.byteLength);
-    const resultPointer = api.get_result_pointer();
-    if(resultPointer === 0) {
-      throw new Error("Could not decode image");
-    }
-    const resultWidth = api.get_result_width();
-    const resultHeight = api.get_result_height();
-    const resultView = new Uint8Array(Module.HEAP8.buffer, resultPointer, resultWidth * resultHeight * 4);
-    const result = new Uint8ClampedArray(resultView);
-    const imageData = new ImageData(result, resultWidth, resultHeight);
-    api.free_result(resultPointer);
-    api.destroy_buffer(p);
+    const result = Module.decode(image);
+    const imageData = new ImageData(new Uint8ClampedArray(result.buffer), result.width, result.height);
+    Module.free_result();
     const canvas = document.createElement('canvas');
-    canvas.width = resultWidth;
-    canvas.height = resultHeight;
+    canvas.width = result.width;
+    canvas.height = result.height;
     document.body.appendChild(canvas);
     const ctx = canvas.getContext('2d');
     ctx.putImageData(imageData, 0, 0);
