Adding chroma subsampling for mozjpeg

--- a/codecs/mozjpeg_enc/example.html
+++ b/codecs/mozjpeg_enc/example.html
@@ -33,6 +33,7 @@
       trellis_opt_zero: true,
       trellis_opt_table: true,
       trellis_loops: 1,
+      chroma_subsample: 0,
     });
 
     const blob = new Blob([result], {type: 'image/jpeg'});
