Simplifying chroma subsample

--- a/codecs/mozjpeg_enc/example.html
+++ b/codecs/mozjpeg_enc/example.html
@@ -33,7 +33,8 @@
       trellis_opt_zero: false,
       trellis_opt_table: false,
       trellis_loops: 1,
-      chroma_subsample: 0,
+      auto_subsample: true,
+      chroma_subsample: 2,
       separate_chroma_quality: false,
       chroma_quality: 75,
     });
