--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#673ab8">
+    <link rel="shortcut icon" href="/assets/favicon.ico">
     <link rel="manifest" href="/manifest.json">
   </head>
   <body>
