--- a/codecs/mozjpeg_enc/example.html
+++ b/codecs/mozjpeg_enc/example.html
@@ -21,7 +21,7 @@
     console.log('Version:', module.version().toString(16));
     const image = await loadImage('../example.png');
     const result = module.encode(image.data, image.width, image.height, {
-      quality: 40,
+      quality: 75,
       baseline: false,
       arithmetic: false,
       progressive: true,
@@ -29,10 +29,14 @@
       smoothing: 0,
       color_space: 3,
       quant_table: 3,
-      trellis_multipass: true,
-      trellis_opt_zero: true,
-      trellis_opt_table: true,
+      trellis_multipass: false,
+      trellis_opt_zero: false,
+      trellis_opt_table: false,
       trellis_loops: 1,
+      auto_subsample: true,
+      chroma_subsample: 2,
+      separate_chroma_quality: false,
+      chroma_quality: 75,
     });
 
     const blob = new Blob([result], {type: 'image/jpeg'});
