--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#673ab8">
     <link rel="shortcut icon" href="/assets/favicon.ico">
+    <meta name="theme-color" content="#f78f21">
     <link rel="manifest" href="/manifest.json">
   </head>
   <body>
-    <div id="app"></div>
   </body>
 </html>
