--- a/lul/index.html
+++ b/lul/index.html
@@ -12,13 +12,12 @@ const squoosh = Comlink.proxy(ifr.contentWindow);
 async function load() {
   const blob = await fetch("/profile.jpg").then(resp => resp.blob());
   await squoosh.setFile(blob);
-  console.log('done')
+  extract();
 }
 document.all.load.onclick = load;
 
 async function extract() {
   const file = await squoosh.getBlob(1);
-  console.log('asdf', file)
   const url = URL.createObjectURL(file);
   const img = document.createElement('img');
   img.src = url;
