--- a/codecs/hqx/test.html
+++ b/codecs/hqx/test.html
@@ -4,7 +4,6 @@
 
   async function run() {
     const api = await init();
-    self.api = api;
     const bitmap = await createImageBitmap(await fetch("/test.png").then(r => r.blob()));
     const canvas = document.createElement("canvas");
     canvas.width = bitmap.width;
@@ -12,10 +11,15 @@
     const ctx = canvas.getContext("2d");
     ctx.drawImage(bitmap, 0, 0);
     const imgdata = ctx.getImageData(0, 0, bitmap.width, bitmap.height);
-    self.img = imgdata;
-    const r = resize(imgdata.data.buffer, bitmap.width, bitmap.height, 2);
-    console.log("Done", r);
-    self.r = r;
+    const factor = 4;
+    const r = resize(new Uint32Array(imgdata.data.buffer), bitmap.width, bitmap.height, factor);
+
+    canvas.width = bitmap.width * factor;
+    canvas.height = bitmap.height * factor;
+    const output = new ImageData(new Uint8ClampedArray(r.buffer), canvas.width, canvas.height);
+    ctx.putImageData(output, 0, 0);
+    canvas.style = `width: ${canvas.width * 4}px; height: ${canvas.height * 4}px; image-rendering: pixelated;`;
+    document.body.append(canvas);
   }
   run();
 </script>
