Further speed improvements
 - Store Emscripten cache inside node_modules/.em_cache. Docker image ships without LTO libs, so Emscripten has to rebuild stdlibs on every build otherwise.
 - Merge webp_enc + webp_dec build scripts. Core libwebp library is same in both cases, so there's no point in storing and building two copies of it.

--- a/codecs/webp/dec/example.html
+++ b/codecs/webp/dec/example.html
@@ -10,7 +10,7 @@
 
   Module.onRuntimeInitialized = async _ => {
     console.log('Version:', Module.version().toString(16));
-    const image = await loadFile('../example.webp');
+    const image = await loadFile('../../example.webp');
     const result = Module.decode(image);
     const imageData = new ImageData(new Uint8ClampedArray(result.buffer), result.width, result.height);
     Module.free_result();
