--- a/codecs/mozjpeg_enc/example.html
+++ b/codecs/mozjpeg_enc/example.html
@@ -20,29 +20,28 @@
   module.onRuntimeInitialized = async _ => {
     console.log('Version:', module.version().toString(16));
     const image = await loadImage('../example.png');
-    const result = module.encode(image.data, image.width, image.height, {
-      quality: 75,
-      baseline: false,
-      arithmetic: false,
-      progressive: true,
-      optimize_coding: true,
-      smoothing: 0,
-      color_space: 3,
-      quant_table: 3,
-      trellis_multipass: false,
-      trellis_opt_zero: false,
-      trellis_opt_table: false,
-      trellis_loops: 1,
-      auto_subsample: true,
-      chroma_subsample: 2,
-      separate_chroma_quality: false,
-      chroma_quality: 75,
-    });
+    let results = [];
+    for (let i = 0; i < 2; i++) {
+      results.push(module.encode(image.data, image.width, image.height, {
+        quality: 75,
+        baseline: false,
+        arithmetic: false,
+        progressive: true,
+        optimize_coding: true,
+        smoothing: 0,
+        color_space: 3,
+        quant_table: 3,
+        trellis_multipass: false,
+        trellis_opt_zero: false,
+        trellis_opt_table: false,
+        trellis_loops: 1,
+        auto_subsample: true,
+        chroma_subsample: 2,
+        separate_chroma_quality: false,
+        chroma_quality: 75,
+      }));
+    }
 
-    const blob = new Blob([result], {type: 'image/jpeg'});
-    const blobURL = URL.createObjectURL(blob);
-    const img = document.createElement('img');
-    img.src = blobURL;
-    document.body.appendChild(img);
+    console.log(results);
   };
 </script>
