--- a/codecs/webp/dec/example.html
+++ b/codecs/webp/dec/example.html
@@ -11,9 +11,7 @@
   Module.onRuntimeInitialized = async _ => {
     console.log('Version:', Module.version().toString(16));
     const image = await loadFile('../../example.webp');
-    const result = Module.decode(image);
-    const imageData = new ImageData(new Uint8ClampedArray(result.buffer), result.width, result.height);
-    Module.free_result();
+    const imageData = Module.decode(image);
     const canvas = document.createElement('canvas');
     canvas.width = result.width;
     canvas.height = result.height;
