Add Node 14 for SIMD tests

--- a/codecs/mozjpeg_enc/example.html
+++ b/codecs/mozjpeg_enc/example.html
@@ -1,26 +1,14 @@
 <!doctype html>
 <script src='mozjpeg_enc.js'></script>
 <script>
-  const module = mozjpeg_enc();
-
-  async function loadImage(src) {
-    // Load image
-    const img = document.createElement('img');
-    img.src = src;
-    await new Promise(resolve => img.onload = resolve);
-    // Make canvas same size as image
-    const canvas = document.createElement('canvas');
-    [canvas.width, canvas.height] = [img.width, img.height];
-    // Draw image onto canvas
-    const ctx = canvas.getContext('2d');
-    ctx.drawImage(img, 0, 0);
-    return ctx.getImageData(0, 0, img.width, img.height);
-  }
-
-  module.onRuntimeInitialized = async _ => {
-    console.log('Version:', module.version().toString(16));
+	const module = mozjpeg_enc({
+	loadFile() {
+		return "./mozjpeg_enc.wasm";
+	},
+  async onRuntimeInitialized() {
+    //console.log('Version:', module.version().toString(16));
     const image = await loadImage('../example.png');
-    const result = module.encode(image.data, image.width, image.height, {
+    const result = this.encode(image.data, image.width, image.height, {
       quality: 75,
       baseline: false,
       arithmetic: false,
@@ -44,5 +32,21 @@
     const img = document.createElement('img');
     img.src = blobURL;
     document.body.appendChild(img);
-  };
+  }
+	});
+
+  async function loadImage(src) {
+    // Load image
+    const img = document.createElement('img');
+    img.src = src;
+    await new Promise(resolve => img.onload = resolve);
+    // Make canvas same size as image
+    const canvas = document.createElement('canvas');
+    [canvas.width, canvas.height] = [img.width, img.height];
+    // Draw image onto canvas
+    const ctx = canvas.getContext('2d');
+    ctx.drawImage(img, 0, 0);
+    return ctx.getImageData(0, 0, img.width, img.height);
+  }
+
 </script>
