--- a/codecs/imagequant/example.html
+++ b/codecs/imagequant/example.html
@@ -29,7 +29,7 @@
     const rawImage = Module.zx_quantize(image.data, image.width, image.height, 1.0);
     console.log('done');
 
-    const imageData = new ImageData(new Uint8ClampedArray(rawImage.buffer), rawImage.width, rawImage.height);
+    const imageData = new ImageData(new Uint8ClampedArray(rawImage.buffer), image.width, image.height);
     const canvas = document.createElement('canvas');
     canvas.width = image.width;
     canvas.height = image.height;
