--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
     <link rel="manifest" href="/manifest.json">
   </head>
   <body>
-    <script src="./index.ts"></script>
+    <script type="module" src="./index.ts"></script>
   </body>
 </html>
