--- a/codecs/webp/enc/example.html
+++ b/codecs/webp/enc/example.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<script type="module">
-  import webp_enc from './webp_enc.js';
-
+<!doctype html>
+<script src='webp_enc.js'></script>
+<script>
   async function loadImage(src) {
     // Load image
     const img = document.createElement('img');
     img.src = src;
-    await new Promise((resolve) => (img.onload = resolve));
+    await new Promise(resolve => img.onload = resolve);
     // Make canvas same size as image
     const canvas = document.createElement('canvas');
     [canvas.width, canvas.height] = [img.width, img.height];
@@ -16,9 +15,7 @@
     return ctx.getImageData(0, 0, img.width, img.height);
   }
 
-  async function main() {
-    const module = await webp_enc();
-
+  webp_enc().then(async module => {
     console.log('Version:', module.version().toString(16));
     const image = await loadImage('../../example.png');
     const result = module.encode(image.data, image.width, image.height, {
@@ -51,13 +48,11 @@
       use_sharp_yuv: 0,
     });
     console.log('size', result.length);
-    const blob = new Blob([result], { type: 'image/webp' });
+    const blob = new Blob([result], {type: 'image/webp'});
 
     const blobURL = URL.createObjectURL(blob);
     const img = document.createElement('img');
     img.src = blobURL;
     document.body.appendChild(img);
-  }
-
-  main();
+  });
 </script>
