--- a/codecs/webp/dec/example.html
+++ b/codecs/webp/dec/example.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<script type="module">
-  import webp_dec from './webp_dec.js';
-
+<!doctype html>
+<script src='webp_dec.js'></script>
+<script>
   async function loadFile(src) {
     const resp = await fetch(src);
     return await resp.arrayBuffer();
   }
 
-  async function main() {
-    const module = await webp_dec();
+  webp_dec().then(async module => {
     console.log('Version:', module.version().toString(16));
     const image = await loadFile('../../example.webp');
     const imageData = module.decode(image);
@@ -18,7 +16,5 @@
     document.body.appendChild(canvas);
     const ctx = canvas.getContext('2d');
     ctx.putImageData(imageData, 0, 0);
-  }
-
-  main();
+  });
 </script>
