--- a/codecs/imagequant/example.html
+++ b/codecs/imagequant/example.html
@@ -8,7 +8,7 @@
   import imagequant from './imagequant.js';
 
   async function loadImage(src) {
-    // Load image
+    // Load image test
     const img = document.createElement('img');
     img.src = src;
     await new Promise((resolve) => (img.onload = resolve));
